# rabbitmq-file-receiver

./: .gitignore  README.md  RabbitMQFileReceiver.py  main.py  pyproject.toml
domain/entity/: ServiceConnectorEntity.py  __init__.py
