[tool.poetry]
name = "rabbitmq-file-receiver"
version = "0.1.0"
description = ""
authors = ["Kalinka George <xitowzys@gmail.com>"]
readme = "README.md"
packages = [{include = "rabbitmq_file_receiver"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
