[tool.poetry]
name = "rabbitmq-file-receiver"
version = "0.1.0"
description = ""
authors = ["Kalinka George <xitowzys@gmail.com>"]
readme = "README.md"
packages = [{include = "rabbitmq_file_receiver"}]

[tool.poetry.dependencies]
python = "^3.11"
kombu = "^5.2.4"
pydantic = "^1.10.7"
httpx = "^0.23.3"
loguru = "^0.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
